beginning of boxplot of stardates

--- a/boxplot_of_stardates.Rmd
+++ b/boxplot_of_stardates.Rmd
@@ -3,6 +3,8 @@ title: "Boxplot of Stardates"
 author: "Daavid Stein"
 date: "March 20, 2019"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -12,4 +14,12 @@ library(rtrek)
 ```
 
 ## Boxplot of Stardates
+```{r}
+  stapi("episode", page_count = TRUE) # check first
+# stapi("episode", page = 2) %>% select(1:2)
+ stapi("episode")
+ episode <- stapi("episode")
+  Q$episodes %>% select(uid, title, stardateFrom, stardateTo)
+  
+```
 
