--- a/boldlyplotly.Rmd
+++ b/boldlyplotly.Rmd
@@ -39,6 +39,61 @@ p <- plot_ly(trek_data, y = ~NChars, color = ~Series,
 p
 ```
 
-# 2nd Damn Fool Question: 
-## Does the average percentage of female characters per episode vary by series? 
+#Proportion of Episodes of which the Characters Are at Least 20% Female, by Series
 
+```{r}
+library(dplyr)
+library(plotly)
+
+df<-read.csv("trek_data.csv")
+
+m<-rep(NA,nrow(df))
+
+for(i in 1:nrow(df)){
+  m[i]<-df$N_F[i]/df$NChars[i]
+}
+
+m<-m[!is.na(m)]
+
+boundary<-.2
+
+Series<-c("TOS","TNG","DS9","VOY")
+
+dfds9<-filter(df,Series=="DS9")
+
+dftng<-filter(df,Series=="TNG")
+
+dftos<-filter(df,Series=="TOS")
+
+dfvoy<-filter(df,Series=="VOY")
+
+ds91<-nrow(filter(dfds9,N_F/NChars>=boundary))/nrow(dfds9)
+
+ds92<-1-ds91
+
+tng1<-nrow(filter(dftng,N_F/NChars>=boundary))/nrow(dftng)
+
+tng2<-1-tng1
+
+tos1<-nrow(filter(dftos,N_F/NChars>=boundary))/nrow(dftos)
+
+tos2<-1-tos1
+
+voy1<-nrow(filter(dfvoy,N_F/NChars>=boundary))/nrow(dfvoy)
+
+voy2<-1-voy1
+
+prop1<-c(tos1,tng1,ds91,voy1)
+
+prop2<-c(tos2,tng2,ds92,voy2)
+
+data<-data.frame(Series,prop1,prop2)
+
+p <- plot_ly(data, x = ~Series, y = ~prop1, type = 'bar', name = 'At Least 20% Female', 
+             textfont = list(size = 13))%>%
+  add_trace(y = ~prop2, name = 'Less Than 20% Female') %>%
+  layout(autosize=F, width=500, height=500, margin= list(l = 50,r = 50,b = 100,t = 100,pad = 10),title = "Proportion of Episodes in which \n the Characters Are at Least 20% Female, by Series \n" ,yaxis = list(title = 'Proportion of Episodes'), barmode = 'group')
+
+p
+
+```
